feat: add images, styles, queries (date +'%a, %b %e, %Y %H:%M:%S')

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,200;0,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>CSS Bayan</title>
   </head>
-  <body></body>
+  <body>
+    <ul class="meme">
+      <li class="meme-item">
+        <label class="meme-title" for="meme-1">Dich</label>
+        <input
+          class="meme-input"
+          type="radio"
+          name="meme"
+          id="meme-1"
+          checked
+        />
+        <div class="meme-img">
+          <img src="meme-1.jpg" alt="" />
+        </div>
+      </li>
+      <li class="meme-item">
+        <label class="meme-title" for="meme-2">Elrond</label>
+        <input class="meme-input" type="radio" name="meme" id="meme-2" />
+        <div class="meme-img">
+          <img src="meme-2.jpg" alt="" />
+        </div>
+      </li>
+      <li class="meme-item">
+        <label class="meme-title" for="meme-3">Advokat</label>
+        <input class="meme-input" type="radio" name="meme" id="meme-3" />
+        <div class="meme-img">
+          <img src="meme-3.jpg" alt="" />
+        </div>
+      </li>
+      <li class="meme-item">
+        <label class="meme-title" for="meme-4">Borsch</label>
+        <input class="meme-input" type="radio" name="meme" id="meme-4" />
+        <div class="meme-img">
+          <img src="meme-4.jpg" alt="" />
+        </div>
+      </li>
+    </ul>
+  </body>
 </html>
